--- a/CineQuebec.Windows/View/ConnexionControl.xaml
+++ b/CineQuebec.Windows/View/ConnexionControl.xaml
@@ -1,31 +1,34 @@
 ﻿<UserControl x:Class="CineQuebec.Windows.View.ConnexionControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:CineQuebec.Windows.View"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:rs="clr-namespace:CineQuebec.Windows.Ressources.i18n"
-             >
-    <Grid  >
+             Background="White"
+             mc:Ignorable="d"
+             d:DesignHeight="450" d:DesignWidth="800"
+             Style="{StaticResource Page_Style}">
+    <Grid HorizontalAlignment="Center">
 
-        <StackPanel VerticalAlignment="Center" >
-            <Label Content="Courriel" 
+        <StackPanel VerticalAlignment="Center">
+            <Label Content="Courriel"
                    Style="{StaticResource defautLabel}" />
-            <TextBox Text="{Binding Email}"  Width="200"  Style="{StaticResource defautInput}"
-                     Margin="0 0 0 10"/>
+            <TextBox Text="{Binding Email}" Width="200" Style="{StaticResource defautInput}"
+                     Margin="0 0 0 10" />
 
-            <Label Content="{x:Static rs:Resource.connexion_password}" 
+            <Label Content="{x:Static rs:Resource.connexion_password}"
                    Style="{StaticResource defautLabel}" />
-            <PasswordBox x:Name="txtMdP"  Width="200" 
-                     Margin="0 0 0 20" />
+            <PasswordBox x:Name="txtMdP" Width="200"
+                         Margin="0 0 0 20" />
 
 
             <StackPanel>
-                <Button Content="{x:Static rs:Resource.connexion_connect}" 
-                Style="{StaticResource defautButton}" Width="100" Click="Button_Click" />
+                <Button Content="{x:Static rs:Resource.connexion_connect}"
+                        Style="{StaticResource defautButton}" Width="100" Click="Button_Click" />
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Text="Vous êtes nouveau?" />
-                    <TextBlock x:Name="btnConnexion" Text=" S'inscrire"  Foreground="Blue" MouseLeftButtonDown="Afficher_form_inscription"/>
+                    <TextBlock x:Name="btnConnexion" Text=" S'inscrire" Foreground="Blue"
+                               MouseLeftButtonDown="Afficher_form_inscription" />
                 </StackPanel>
             </StackPanel>
         </StackPanel>
