--- a/CineQuebec.Windows/View/NavWindows.xaml
+++ b/CineQuebec.Windows/View/NavWindows.xaml
@@ -78,7 +78,12 @@
                                 </StackPanel>
                             </Button>
 
-
+                            <Button Style="{StaticResource menuButton}" Click="ToggleButton_Recompense_Click" >
+                                <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                                    <md:PackIcon Kind="PencilOutline" Style="{StaticResource menuBtnIcon}"/>
+                                    <TextBlock Text="Récompenses" />
+                                </StackPanel>
+                            </Button>
 
 
 
