--- a/CineQuebec.Windows/View/RecompenseAdminView/RecompenseView.xaml
+++ b/CineQuebec.Windows/View/RecompenseAdminView/RecompenseView.xaml
@@ -1,184 +1,56 @@
 ﻿<UserControl x:Class="CineQuebec.Windows.View.RecompenseAdminView.RecompenseView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:CineQuebec.Windows.View"
-             xmlns:rs="clr-namespace:CineQuebec.Windows.Ressources.i18n"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:CineQuebec.Windows.View.RecompenseAdminView"
+      mc:Ignorable="d" 
+      d:DesignHeight="450" d:DesignWidth="1000"
+      xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
+       xmlns:rs="clr-namespace:CineQuebec.Windows.Ressources.i18n"
              Style="{StaticResource Page_Style}">
-    <UserControl.Resources>
-        <Style x:Key="CustomErrorControlOnErrorStyle" TargetType="TextBox">
-            <Setter Property="Validation.ErrorTemplate">
-                <Setter.Value>
-                    <ControlTemplate>
-                        <StackPanel>
-                            <AdornedElementPlaceholder x:Name="placeholder" />
-                            <TextBlock FontSize="11" FontStyle="Italic" Foreground="Red"
-                                  Text="{Binding ElementName=placeholder, Path=AdornedElement.(Validation.Errors)[0].ErrorContent}" />
-                        </StackPanel>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-    </UserControl.Resources>
 
-    <Grid x:Name="racineGrille" Background="White" HorizontalAlignment="Center">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="10" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="10" />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="10"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="40"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-        </Grid.RowDefinitions>
+    <Grid>
+        <Button Style="{StaticResource menuButton}" Name="AddRecompenseButton" Click="ToggleButton_AddRecompense_Click" HorizontalAlignment="Right" VerticalAlignment="Top" Padding="50" >
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                <md:PackIcon Kind="PencilOutline" Style="{StaticResource menuBtnIcon}"/>
+                <TextBlock Text="Ajouter récompense" Padding="10" />
+            </StackPanel>
+        </Button>
+        <Border Margin="0 20 0 20">
+            <TextBlock Text="Liste des récompenses" Foreground="White" HorizontalAlignment="Center" FontSize="20"  />
+        </Border>
 
-        <TextBlock Grid.Row="1" Grid.Column="1" FontSize="36" Text="Mes préférences" Grid.ColumnSpan="4" Margin="0,0,0,20" TextAlignment="Center" />
 
-        <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" Margin="0, 20">
-            <Label Width="120" Content="Réalisateurs" FontFamily="Segoe UI" FontWeight="Black" />
-            <ListBox x:Name="lstPreferencesRealisateurs" Grid.Column="0" Width="200" ItemsSource="{ Binding Realisateurs}">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <TextBlock>
-                            <TextBlock.Text>
-                                <MultiBinding StringFormat="{}{0} {1}">
-                                    <Binding Path="Nom" />
-                                    <Binding Path="Prenom" />
-                                </MultiBinding>
-                            </TextBlock.Text>
-                        </TextBlock>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
-            <Button Content="Modifier" Click="ModifierPreferencesRealisateurs_Click" Margin="10"/>
-        </StackPanel>
+        <Grid  Margin="60 60 60 20"  Background="White" >
 
-        <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal" Margin="0, 20" Visibility="{Binding RealisateursPreferencesVisibility}">
-            <ComboBox x:Name="cmbPreferencesRealisateurs" Grid.Column="1" Width="200" ItemsSource="{Binding Realisateurs}" SelectedItem="{Binding RealisateurAEnleverSelectionne, Mode=TwoWay}" >
-                <ComboBox.ItemTemplate>
-                    <DataTemplate>
-                        <TextBlock>
-                            <TextBlock.Text>
-                                <MultiBinding StringFormat="{}{0} {1}">
-                                    <Binding Path="Nom" />
-                                    <Binding Path="Prenom" />
-                                </MultiBinding>
-                            </TextBlock.Text>
-                        </TextBlock>
-                    </DataTemplate>
-                </ComboBox.ItemTemplate>
-            </ComboBox>
-            <Button Content="Enlever" Margin="10" Click="EnleverPreferencesRealisateurs_Click" />
-            <ComboBox x:Name="cmbRealisateursEnDB" Grid.Column="2" Width="200" ItemsSource="{Binding RealisateursBDList}" SelectedItem="{Binding RealisateurSelectionne, Mode=TwoWay}" >
-                <ComboBox.ItemTemplate>
-                    <DataTemplate>
-                        <TextBlock>
-                            <TextBlock.Text>
-                                <MultiBinding StringFormat="{}{0} {1}">
-                                    <Binding Path="Nom" />
-                                    <Binding Path="Prenom" />
-                                </MultiBinding>
-                            </TextBlock.Text>
-                        </TextBlock>
-                    </DataTemplate>
-                </ComboBox.ItemTemplate>
-            </ComboBox>
-            <Button x:Name="AjoutRealisateurPreference"  Content="Ajouter" Margin="10" Click="AjouterPreferencesRealisateurs_Click" />
-        </StackPanel>
+            <DataGrid x:Name="dataGridRecompenses" Background="White" Margin="45 10" Grid.Column="0" Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" RowStyle="{DynamicResource DataGridRowStyle1}" ItemsSource="{Binding Recompenses}" AutoGenerateColumns="False">
+                <DataGrid.Columns>
+                    <DataGridTextColumn IsReadOnly="True" CanUserResize="True" Width="200"  Header="Film" Binding="{Binding Projection.Film.FrenchTitle}" />
 
-        <StackPanel Grid.Row="4" Grid.Column="1" Orientation="Horizontal" Margin="0, 20">
-            <Label Width="120" Content="Acteurs" FontFamily="Segoe UI" FontWeight="Black" />
-            <ListBox x:Name="lstPreferencesActeurs" Grid.Column="0" Width="200" ItemsSource="{ Binding Acteurs}">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <TextBlock>
-                            <TextBlock.Text>
-                                <MultiBinding StringFormat="{}{0} {1}">
-                                    <Binding Path="Nom" />
-                                    <Binding Path="Prenom" />
-                                </MultiBinding>
-                            </TextBlock.Text>
-                        </TextBlock>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
-            <Button Content="Modifier" Click="ModifierPreferencesActeurs_Click" Margin="10"/>
-        </StackPanel>
+                    <DataGridTextColumn IsReadOnly="True" CanUserResize="False" Width="200" Header="Date projection" Binding="{Binding Projection.DateHeureDebut}" />
 
-        <StackPanel Grid.Row="5" Grid.Column="1" Orientation="Horizontal" Margin="0, 20" Visibility="{Binding ActeursPreferencesVisibility}">
-            <ComboBox x:Name="cmbPreferencesActeurs" Grid.Column="1" Width="200" ItemsSource="{Binding Acteurs}" SelectedItem="{Binding ActeurAEnleverSelectionne, Mode=TwoWay}" >
-                <ComboBox.ItemTemplate>
-                    <DataTemplate>
-                        <TextBlock>
-                            <TextBlock.Text>
-                                <MultiBinding StringFormat="{}{0} {1}">
-                                    <Binding Path="Nom" />
-                                    <Binding Path="Prenom" />
-                                </MultiBinding>
-                            </TextBlock.Text>
-                        </TextBlock>
-                    </DataTemplate>
-                </ComboBox.ItemTemplate>
-            </ComboBox>
-            <Button Content="Enlever" Margin="10" Click="EnleverPreferencesActeurs_Click" />
-            <ComboBox x:Name="cmbActeursEnDB" Grid.Column="2" Width="200" ItemsSource="{Binding ActeursBDList}" SelectedItem="{Binding ActeurSelectionne, Mode=TwoWay}" >
-                <ComboBox.ItemTemplate>
-                    <DataTemplate>
-                        <TextBlock>
-                            <TextBlock.Text>
-                                <MultiBinding StringFormat="{}{0} {1}">
-                                    <Binding Path="Nom" />
-                                    <Binding Path="Prenom" />
-                                </MultiBinding>
-                            </TextBlock.Text>
-                        </TextBlock>
-                    </DataTemplate>
-                </ComboBox.ItemTemplate>
-            </ComboBox>
-            <Button x:Name="AjoutActeurPreference"  Content="Ajouter" Margin="10" Click="AjouterPreferencesActeurs_Click" />
-        </StackPanel>
 
-        <StackPanel Grid.Row="6" Grid.Column="1" Orientation="Horizontal" Margin="0, 20">
-            <Label Width="120" Content="Catégories" FontFamily="Segoe UI" FontWeight="Black" />
-            <ListBox x:Name="lstPreferencesCategories" Grid.Column="0" Width="200" ItemsSource="{ Binding Categories}">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <TextBlock Text="{Binding Nom}" />
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
-            <Button Content="Modifier" Click="ModifierPreferencesCategories_Click" Margin="10"/>
-        </StackPanel>
+                    <DataGridTextColumn IsReadOnly="True" CanUserResize="False"  Width="150" Header="Place restante" Binding="{Binding PlaceRestante}" />
 
-        <StackPanel Grid.Row="7" Grid.Column="1" Orientation="Horizontal" Margin="0, 20" Visibility="{Binding CategoriesPreferencesVisibility}">
-            <ComboBox x:Name="cmbPreferencesCategories" Grid.Column="1" Width="200" ItemsSource="{Binding Categories}" SelectedItem="{Binding CategorieAEnleverSelectionne, Mode=TwoWay}" >
-                <ComboBox.ItemTemplate>
-                    <DataTemplate>
-                        <TextBlock Text="{Binding Categories.Nom}" />
-                    </DataTemplate>
-                </ComboBox.ItemTemplate>
-            </ComboBox>
-            <Button Content="Enlever" Margin="10" Click="EnleverPreferencesCategories_Click" />
-            <ComboBox x:Name="cmbCategoriesEnDB" Grid.Column="2" Width="200" ItemsSource="{Binding CategoriesBDList}" SelectedItem="{Binding CategorieSelectionne, Mode=TwoWay}" >
-                <ComboBox.ItemTemplate>
-                    <DataTemplate>
-                        <TextBlock Text="{Binding Nom}"/>
-                    </DataTemplate>
-                </ComboBox.ItemTemplate>
-            </ComboBox>
-            <Button x:Name="AjoutCategoriePreference"  Content="Ajouter" Margin="10" Click="AjouterPreferencesCategories_Click" />
-        </StackPanel>
+
+                    <DataGridTemplateColumn Header="Operations" IsReadOnly="True" CanUserResize="False" Width="150">
+                        <DataGridTemplateColumn.CellTemplate>
+
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal">
+                                    <Button Style="{StaticResource DataGridEditBtn}" Click="ToggleButton_EditRecompense_Click">
+                                        <md:PackIcon Kind="Plus" Foreground="White" Style="{StaticResource DataGridBtnIcon}"/>
+                                    </Button>
+                                </StackPanel>
+                            </DataTemplate>
+
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                </DataGrid.Columns>
+            </DataGrid>
+
+        </Grid>
 
     </Grid>
 </UserControl>
